--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -5,3 +5,13 @@
   become: true
   roles:
     - ../../
+  vars:
+    tinyproxy_tinyproxy_conf:
+      - |
+        User nobody
+        Group nogroup
+        Port {{ tinyproxy_port }}
+    tinyproxy_port: 3128
+    tinyproxy_allow:
+      - "{{ ansible_lo['ipv4']['address'] }}"
+      - "{{ ansible_default_ipv4['address'] }}"
