--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,9 +2,9 @@
 ---
 tinyproxy_install: []
 
-tinyproxy_local: []
-tinyproxy_path: []
-
-tinyproxy_server: 127.0.0.1
-tinyproxy_server_type: 5
-tinyproxy_server_port: 1080
+tinyproxy_port: 8888
+tinyproxy_allow:
+  - "{{ ansible_lo['ipv4']['address'] }}"
+tinyproxy_connect_port:
+  - 443
+  - 563
