--- a/tests/test.yml
+++ b/tests/test.yml
@@ -11,3 +11,25 @@
         User nobody
         Group nogroup
         Port {{ tinyproxy_port }}
+        Timeout 666
+        DefaultErrorFile "/usr/share/tinyproxy/default.html"
+        StatFile "/usr/share/tinyproxy/stats.html"
+        Logfile "/var/log/tinyproxy/tinyproxy.log"
+        LogLevel Info
+        PidFile "/var/run/tinyproxy/tinyproxy.pid"
+        MaxClients 100
+        MinSpareServers 5
+        MaxSpareServers 20
+        StartServers 10
+        MaxRequestsPerChild 0
+        {% for allow in tinyproxy_allow %}
+        Allow {{ allow }}
+        {% endfor %}
+        ViaProxyName "tinyproxy"
+        {% for connect_port in tinyproxy_connect_port %}
+        ConnectPort {{ connect_port }}
+        {% endfor %}
+    tinyproxy_port: 3128
+    tinyproxy_allow:
+      - "{{ ansible_lo['ipv4']['address'] }}"
+      - "{{ ansible_default_ipv4['address'] }}"
