--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -5,6 +5,8 @@
   become: true
   roles:
     - ../../
+  post_tasks:
+    - include: post.yml
   vars:
     tinyproxy_port: 3128
     tinyproxy_allow:
