Fixed failing tests

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -51,7 +51,23 @@
     name: tinyproxy
     state: "{{ service_default_state | default('started') }}"
     enabled: "{{ service_default_enabled | default(true) | bool }}"
+  when: ansible_service_mgr == 'systemd'
   tags:
     - configuration
     - tinyproxy
     - tinyproxy-start-enable-service
+    - tinyproxy-start-enable-service-systemd
+
+# TODO: Remove when support for Ubuntu 14.04 is dropped
+- name: start and enable service
+  service:
+    name: tinyproxy
+    state: "{{ service_default_state | default('started') }}"
+    enabled: "{{ service_default_enabled | default(true) | bool }}"
+    pattern: /usr/sbin/tinyproxy
+  when: ansible_service_mgr != 'systemd'
+  tags:
+    - configuration
+    - tinyproxy
+    - tinyproxy-start-enable-service
+    - tinyproxy-start-enable-service-initd
