Fix Ansible warnings And add support for Ubuntu 18.04

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 # meta file for tinyproxy
 ---
 galaxy_info:
+  role_name: tinyproxy
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
   description: Set up tinyproxy in Debian-like systems
@@ -11,6 +12,7 @@ galaxy_info:
       versions:
         - trusty
         - xenial
+        - bionic
     - name: Debian
       versions:
         - jessie
