--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,11 +13,10 @@
 
 - name: install dependencies
   apt:
-    name: "{{ item }}"
+    name: "{{ tinyproxy_dependencies }}"
     state: "{{ apt_install_state | default('latest') }}"
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
-  with_items: "{{ tinyproxy_dependencies }}"
   tags:
     - configuration
     - tinyproxy
@@ -25,9 +24,8 @@
 
 - name: install additional
   apt:
-    name: "{{ item }}"
+    name: "{{ tinyproxy_install }}"
     state: "{{ apt_install_state | default('latest') }}"
-  with_items: "{{ tinyproxy_install }}"
   tags:
     - configuration
     - tinyproxy
