--- a/tests/post.yml
+++ b/tests/post.yml
@@ -4,7 +4,7 @@
   apt:
     name:
       - curl
-    state: "{{ apt_install_state | default('latest') }}"
+    state: "{{ package_install_state | default('latest') }}"
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
 
