--- a/tests/post.yml
+++ b/tests/post.yml
@@ -7,6 +7,8 @@
     state: "{{ package_install_state | default('latest') }}"
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
+  when: 
+    - ansible_os_family == 'Debian'
 
 - name: post | test installation
   command: >
