--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -7,7 +7,8 @@
     tinyproxy_configuration_file: /etc/tinyproxy.conf
     proxy_user: nobody
     proxy_group: nogroup
-  when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version == "16") or
+  when: (ansible_distribution == "Ubuntu" and ansible_distribution_major_version == "14") or
+        (ansible_distribution == "Ubuntu" and ansible_distribution_major_version == "16") or
         (ansible_distribution == "Debian" and ansible_distribution_major_version == "8") 
 
 - name: Set facts for Ubuntu 18 and Debian 9
