--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -2,4 +2,8 @@
 - name: Prepare
   hosts: all
   become: true
-  tasks: []
+  tasks:
+    - name: include vars
+      include_vars: "{{ playbook_dir }}/../../tests/vars/main.yml"
+    - name: include tasks
+      include: "{{ playbook_dir }}/../../tests/tasks/pre.yml"
