--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -2,4 +2,6 @@
 - name: Verify
   hosts: all
   become: true
-  tasks: []
+  tasks:
+    - name: include tasks
+      include: "{{ playbook_dir }}/../../tests/tasks/post.yml"
