--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,32 +5,9 @@
   become: true
   pre_tasks:
     - name: include vars
-      include_vars: main.yml
+      include_vars: "{{ playbook_dir }}/vars/main.yml"
   roles:
     - ../../
   post_tasks:
-    - include: post.yml
-  vars:
-    tinyproxy_tinyproxy_conf:
-      - |
-        User nobody
-        Group nogroup
-        Port {{ tinyproxy_port }}
-        Timeout 666
-        DefaultErrorFile "/usr/share/tinyproxy/default.html"
-        StatFile "/usr/share/tinyproxy/stats.html"
-        Logfile "/var/log/tinyproxy/tinyproxy.log"
-        LogLevel Info
-        PidFile "/var/run/tinyproxy/tinyproxy.pid"
-        MaxClients 100
-        MinSpareServers 5
-        MaxSpareServers 20
-        StartServers 10
-        MaxRequestsPerChild 0
-        {% for allow in tinyproxy_allow %}
-        Allow {{ allow }}
-        {% endfor %}
-        ViaProxyName "tinyproxy"
-        {% for connect_port in tinyproxy_connect_port %}
-        ConnectPort {{ connect_port }}
-        {% endfor %}
+    - name: include tasks
+      include: "{{ playbook_dir }}/tasks/post.yml"
