--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -5,8 +5,9 @@
   become: true
   pre_tasks:
     - name: include vars
-      include_vars: main.yml
+      include_vars: "{{ playbook_dir }}/vars/main.yml"
   roles:
     - ../../
   post_tasks:
-    - include: post.yml
+    - name: include tasks
+      include: "{{ playbook_dir }}/tasks/post.yml"
