--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -3,5 +3,7 @@
   hosts: all
   become: true
   tasks:
+    - name: include vars
+      include_vars: "{{ playbook_dir }}/../../tests/vars/main.yml"
     - name: include tasks
       include: "{{ playbook_dir }}/../../tests/tasks/post.yml"
