--- a/tests/test.yml
+++ b/tests/test.yml
@@ -6,6 +6,8 @@
   pre_tasks:
     - name: include vars
       include_vars: "{{ playbook_dir }}/vars/main.yml"
+    - name: include tasks
+      include: "{{ playbook_dir }}/tasks/pre.yml"
   roles:
     - ../../
   post_tasks:
