Add case for install from local

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,8 +11,8 @@ tinyproxy_connect_port:
   - 443
   - 563
 
-local_install: false
-local_list_packages:
+tinyproxy_local_install: false
+tinyproxy_local_list_packages:
   # Keep order of packages
   # Can use http-url or local path
   init-system-helpers: ""
